--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="/static/styles/main.css">
+
+
+    <!-- build:css /styles/styles.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+
   </head>
   <body ng-app="zikackdayApp">
     <!--[if lt IE 7]>
@@ -25,14 +30,14 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
 
-    <script src="/static/components/angular/angular.js"></script>
-    <script src="/static/components/angular-resource/angular-resource.js"></script>
-    <script src="/static/components/angular-cookies/angular-cookies.js"></script>
-    <script src="/static/components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="components/angular/angular.js"></script>
+    <script src="components/angular-resource/angular-resource.js"></script>
+    <script src="components/angular-cookies/angular-cookies.js"></script>
+    <script src="components/angular-sanitize/angular-sanitize.js"></script>
 
-    <!-- build:js scripts/scripts.js -->
-    <script src="/static/scripts/app.js"></script>
-    <script src="/static/scripts/controllers/main.js"></script>
+    <!-- build:js /scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
