--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="/static/styles/3e7d1e3d.main.css">
+
+
+    <link rel="stylesheet" href="/styles/styles.css">
+
   </head>
   <body ng-app="zikackdayApp">
     <!--[if lt IE 7]>
@@ -25,12 +28,12 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
 
-    <script src="/static///ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-    <script src="/static///ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
-    <script src="/static///ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-cookies.min.js"></script>
-    <script src="/static///ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-sanitize.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-cookies.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-sanitize.min.js"></script>
 
-    <script src="scripts/d41d8cd9.scripts.js"></script>
+    <script src="/scripts/scripts.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
