front: WIP, time to commit !

--- a/static/index.html
+++ b/static/index.html
@@ -62,6 +62,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/jquery.rdio.min.js"></script>
+    <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
+    <script src="/static/js/typeahead.js"></script>
+    <script src="/static/js/token.js"></script>
+    <script src="/static/js/rdio.playback.js"></script>
+
 
   </body>
 </html>
